--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <header class="jumbotron my-4">
       <h1 class="display-3">Rocio Biroli Camino al Bienestar</h1>
       <p class="lead">Texto1.</p>
-      <a href="#" class="btn btn-primary btn-lg">Atículos!</a>
+      <a href="#" class="btn btn-primary btn-lg">Contacto</a>
     </header>
 
     <!-- Page Features -->
@@ -65,7 +65,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="rocio1BG.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
+            <h4 class="card-title">INICIEMOS UN VIAJE AL BIENESTAR</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
@@ -78,7 +78,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="ro2.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
+            <h4 class="card-title">SANEMOS TUS HERIDAS</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
           </div>
           <div class="card-footer">
@@ -91,7 +91,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="ro3.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
+            <h4 class="card-title">NUNCA DEJES DE REIR</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
@@ -104,7 +104,7 @@
         <div class="card h-100">
           <img class="card-img-top" src="ro4.jpeg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
+            <h4 class="card-title">CONSTRUÍ LAZOS REALES</h4>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
           </div>
           <div class="card-footer">
@@ -122,7 +122,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Rocio Biroli copyright; nov 2020</p>
     </div>
     <!-- /.container -->
   </footer>
