--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Rocio Biroli Camino al Bienestar</h1>
-      <p class="lead">Texto1.</p>
+      <h1 class="display-3">Rocio Biroli: Camino al Bienestar</h1>
+      <p class="lead">couching ontológico</p>
       <a href="#" class="btn btn-primary btn-lg">Contacto</a>
     </header>
 
@@ -66,10 +66,10 @@
           <img class="card-img-top" src="rocio1BG.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">INICIEMOS UN VIAJE AL BIENESTAR</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">semana tras semana con clases puntuales te enseño a despertar tu creatividad y a entender las dinámicas del ser, para que aprendas a expresar y crear tu mejor camino y la vida que mereces vivir.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="#" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="#" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
@@ -92,10 +92,10 @@
           <img class="card-img-top" src="ro3.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">NUNCA DEJES DE REIR</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">Divertite, expresá tu escencia y sé quien quieras ser.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="#" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
@@ -105,10 +105,10 @@
           <img class="card-img-top" src="ro4.jpeg" alt="">
           <div class="card-body">
             <h4 class="card-title">CONSTRUÍ LAZOS REALES</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <p class="card-text">Formá parte de una comunidad especial de personas que quieren sanar y reencontrarse con su ser.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="#" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
