--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img class="card-img-top" src="rocio1BG.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">INICIEMOS UN VIAJE AL BIENESTAR</h4>
-            <p class="card-text">semana tras semana con clases puntuales te enseño a despertar tu creatividad y a entender las dinámicas del ser, para que aprendas a expresar y crear tu mejor camino y la vida que mereces vivir.</p>
+            <p class="card-text">Compartimos herramientas para despertar tu creatividad y a entender las dinámicas del ser, para que aprendas a expresar y crear tu mejor camino y la vida que mereces vivir.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Conocé más!</a>
@@ -79,7 +79,7 @@
           <img class="card-img-top" src="ro2.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">SANEMOS TUS HERIDAS</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <p class="card-text">Trabajamos sobre lo que nos duele, para desactivar lo que nos lastima.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Conocé más!</a>
