--- a/index.html
+++ b/index.html
@@ -69,33 +69,33 @@
             <p class="card-text">Compartimos herramientas para despertar tu creatividad y a entender las dinámicas del ser, para que aprendas a expresar y crear tu mejor camino y la vida que mereces vivir.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Conocé más!</a>
+            <a href="page1.html" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="ro2.jpg" alt="">
+          <img class="card-img-top" src="rocio2BG.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">SANEMOS TUS HERIDAS</h4>
             <p class="card-text">Trabajamos sobre lo que nos duele, para desactivar lo que nos lastima.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Conocé más!</a>
+            <a href="page2.html" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="ro3.jpg" alt="">
+          <img class="card-img-top" src="ro3BG.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">NUNCA DEJES DE REIR</h4>
             <p class="card-text">Divertite, expresá tu escencia y sé quien quieras ser.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Conocé más!</a>
+            <a href="page3.html" class="btn btn-primary">Conocé más!</a>            
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
             <p class="card-text">Formá parte de una comunidad especial de personas que quieren sanar y reencontrarse con su ser.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Conocé más!</a>
+            <a href="page4.html" class="btn btn-primary">Conocé más!</a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Rocio Biroli copyright; nov 2020</p>
+      <p class="m-0 text-center text-white">Javier Fernández Molinari; nov 2020</p>
     </div>
     <!-- /.container -->
   </footer>
