--- a/contacto.html
+++ b/contacto.html
@@ -20,44 +20,41 @@
 
 <body>
 
-  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/">Volver a inicio</a>      
+      <a class="navbar-brand" href="#">Rocio Biroli</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>      
+      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/">Inicio
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="AcercaDe.html">Acerca de mi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
+            <a class="nav-link" href="Abordajes.html">Abordajes</a>
+          </li>          
         </ul>
       </div>
     </div>
-  </nav>  
+  </nav> 
 
   <!-- Page Content -->
   <div class="container">
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">        
-      <h1 class="display-3">INICIEMOS UN VIAJE AL BIENESTAR</h1>
-      <img src="viajeMonta.jpg" alt="Describe the image" height="400" width="800">
-      <p class="lead"><b>INICIEMOS UN VIAJE AL BIENESTAR:</b></p>
-      <p class="card-text">Las experiencias dolorosas que desarrollamos a lo largo de nuestra vida conforman nuestras heridas emocionales. Estas heridas pueden ser múltiples y podemos llamarlas de muchas formas: traición, humillación, desconfianza, abandono, injusticia…
-        No obstante, debemos de hacernos conscientes de nuestras heridas emocionales y evitar maquillarlas, pues cuanto más tiempo esperemos a sanarlas más se agravarán. Además, cuando estamos heridos, vivimos de forma constante situaciones que tocan nuestro dolor y hacen que nos pongamos múltiples máscaras por el miedo a revivir nuestro dolor.</p>
+      <h1 class="display-3">CONTACTO</h1>
+      <img src="ro3.jpg" alt="Describe the image" height="400" width="400">
+      <p class="lead"><b>CONTACTO</b></p>
+      <p class="card-text">Instagram: @rociobiroli</p>
+      <p class="card-text">Facebook: Rocio Biroli</p>
+      <p class="card-text">GMAIL: RocioBiroli@gmail.com</p>
       <a href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/" class="btn btn-primary btn-lg">Volver a Inicio</a>
     </header>
   </div>
