--- a/AcercaDe.html
+++ b/AcercaDe.html
@@ -32,10 +32,7 @@
             <a class="nav-link" href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/">Inicio
               <span class="sr-only">(current)</span>
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="AcercaDe.html">Acerca de mi</a>
-          </li>
+          </li>      
           <li class="nav-item">
             <a class="nav-link" href="Abordajes.html">Abordajes</a>
           </li>
@@ -52,9 +49,9 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">        
-      <h1 class="display-3">CONSTRUÍ LAZOS REALES</h1>
+      <h1 class="display-3">Acerca de mi</h1>
       <img src="LazosAmigas.jpg" alt="Describe the image" height="400" width="800">
-      <p class="lead"><b>CONSTRUÍ LAZOS REALES:</b></p>
+      <p class="lead"><b>SOY ROCIO BIROLI:</b></p>
       <p class="card-text">Las experiencias dolorosas que desarrollamos a lo largo de nuestra vida conforman nuestras heridas emocionales. Estas heridas pueden ser múltiples y podemos llamarlas de muchas formas: traición, humillación, desconfianza, abandono, injusticia…
         No obstante, debemos de hacernos conscientes de nuestras heridas emocionales y evitar maquillarlas, pues cuanto más tiempo esperemos a sanarlas más se agravarán. Además, cuando estamos heridos, vivimos de forma constante situaciones que tocan nuestro dolor y hacen que nos pongamos múltiples máscaras por el miedo a revivir nuestro dolor.</p>
       <a href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/" class="btn btn-primary btn-lg">Volver a Inicio</a>
