--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Javier Fernández Molinari; nov 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Javier R. Fernández Molinari 2020 Instagram: @tecyprog</p>
     </div>
     <!-- /.container -->
   </footer>
