--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Heroic Features - Start Bootstrap Template</title>
+  <title>Rocio Biroli - coaching Ontológico</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,16 @@
 </head>
 
 <body>
+  <table>
+    <tr>
+    <td>Row 1 - Column 1</td>
+    <td>Row 1 - Column 2 </td>
+    </tr>
+    <tr>
+    <td>Row 2 - Column 1</td>
+    <td>Row 2 - Column 2</td>
+    </tr>
+    </table>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -51,7 +61,7 @@
     <header class="jumbotron my-4">        
       <h1 class="display-3">CONTACTO</h1>
       <img src="ro3.jpg" alt="Describe the image" height="400" width="400">
-      <p class="lead"><b>CONTACTO</b></p>
+      <p class="lead"><b></br>CONTACTO</b></p>
       <p class="card-text">Instagram: @rociobiroli</p>
       <p class="card-text">Facebook: Rocio Biroli</p>
       <p class="card-text">GMAIL: RocioBiroli@gmail.com</p>
