--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Rocio Biroli - Couch Ontológico</title>
+  <title>Rocio Biroli - coaching Ontológico</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
       <h1 class="display-3">Rocio Biroli: Camino al Bienestar</h1>
-      <p class="lead">couching ontológico</p>
+      <p class="lead">coaching ontológico</p>
       <a href="contacto.html" class="btn btn-primary btn-lg">Contacto</a>
     </header>
 
