--- a/page4.html
+++ b/page4.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Heroic Features - Start Bootstrap Template</title>
+  <title>Rocio Biroli - coaching Ontológico</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
     <header class="jumbotron my-4">        
       <h1 class="display-3">CONSTRUÍ LAZOS REALES</h1>
       <img src="LazosAmigas.jpg" alt="Describe the image" height="400" width="800">
-      <p class="lead"><b>CONSTRUÍ LAZOS REALES:</b></p>
+      <p class="lead"><b><br/>CONSTRUÍ LAZOS REALES:</b></p>
       <p class="card-text">Las experiencias dolorosas que desarrollamos a lo largo de nuestra vida conforman nuestras heridas emocionales. Estas heridas pueden ser múltiples y podemos llamarlas de muchas formas: traición, humillación, desconfianza, abandono, injusticia…
         No obstante, debemos de hacernos conscientes de nuestras heridas emocionales y evitar maquillarlas, pues cuanto más tiempo esperemos a sanarlas más se agravarán. Además, cuando estamos heridos, vivimos de forma constante situaciones que tocan nuestro dolor y hacen que nos pongamos múltiples máscaras por el miedo a revivir nuestro dolor.</p>
       <a href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/" class="btn btn-primary btn-lg">Volver a Inicio</a>
