--- a/index.html
+++ b/index.html
@@ -23,17 +23,12 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Rocio Biroli</a>
+      <a class="navbar-brand" href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/">Rocio Biroli</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="https://jadosfer.github.io/Rocio-Biroli-Camino-al-Bienestar/">Inicio
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
+        <ul class="navbar-nav ml-auto">          
           <li class="nav-item">
             <a class="nav-link" href="AcercaDe.html">Acerca de mi</a>
           </li>
